2005-11-03  Werner Koch  <wk@g10code.com>

	* configure.ac (winpt): Made it a source package.

	* configure.ac: Bail out if a required tool is missing.

2005-11-02  Werner Koch  <wk@g10code.com>

	* README.SVN, autogen.sh: New.

	* Makefile.am (AUTOMAKE_OPTIONS): Add dist-bzip2.

	* packages/download.sh: Removed inclusion of config.h and defined
	WGET directly.  This is required because the download script needs
	to be used before configure and thus we can't use configure to
	determine the to be used wget; the config.sh script was anyway
	missing.

2005-10-26  Werner Koch  <wk@g10code.com>

	* README: Add basic instructions on how to add new packages.

	* configure.ac: Add detection of GPGee and WinPT.
	* m4/gpg4win.m4 (GPG4WIN_BPKG_BINSRC): New.

	* include/config.nsi.in: Add defines for WinPT and GGee.
	* src/inst-winpt.nsi: New.
	* src/inst-gpgee.nsi: New.
	* src/uninst-winpt.nsi: New.
	* src/uninst-gpgee.nsi: New.
	* src/Makefile.am (gpg4win_bpkgs): Add WinPT and GPGee.
	* src/inst-sections.nsi: Ditto.
	* src/installer-finish.nsi: Ditto.
	* packages/download.sh (server_winpt): Add WinPT.
	(server_gpgee): Add temporary location for gpgee.
	(server_g10code): Add temporary location for gpg-error, gpgme,
	gpa and gpgol.

2005-10-25  Werner Koch  <wk@g10code.com>

	* src/installer.nsi: Don't put the version into the "Name" variable.

2005-10-24  Marcus Brinkmann  <marcus@g10code.de>

	* COPYING: New file.

2005-10-23  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpg4win.mk.in (pdir): Call post_install with source dir as
	current directory.
	* configure.ac (VERSION): Check for dlltool.
	* src/Makefile.am (gpg4win_pkg_libiconv_post_install,
	gpg4win_pkg_gettext_post_install): New macros.
	* src/libiconv.def, src/libintl.def: New files.
	* src/inst-libgpg-error.nsi: Install mo files.
	* src/uninst-libgpg-error.nsi: Uninstall mo files.

2005-10-22  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Add libiconv and gettext as dependencies for