@@ -1,5 +1,13 @@
 2005-11-03  Werner Koch  <wk@g10code.com>
 
+	* include/config.nsi.in: Adjusted for WinPT being a source package now.
+
+	* src/inst-winpt.nsi: Adjusted location of to be installed files.
+
+	* src/Makefile.am (gpg4win_spkgs): Add winpt.
+	(gpg4win_bpkgs): Remove winpt
+	(gpg4win_pkg_winpt_configure): Added.
+
 	* configure.ac (winpt): Made it a source package.
 
 	* configure.ac: Bail out if a required tool is missing.
